# FuzzyLogic

./: CMakeLists.txt
FuzzyLogic_example/: CMakeLists.txt
FuzzyLogic_framework/: CMakeLists.txt  FuzzyLogic.h
FuzzyLogic_framework/core/: BinaryExpression.h  BinaryExpressionModel.h  BinaryShadowExpression.h  Evaluator.h  Expression.h  ExpressionFactory.h  FuzzyFactory.h  NaryExpression.h  UnaryExpression.h  UnaryExpressionModel.h  UnaryShadowExpression.h  ValueModel.h
FuzzyLogic_framework/exceptions/: InconsistentValueException.h  NullOperatorException.h  NullParameterException.h
FuzzyLogic_framework/operator/: CogDefuzz.h  CosDefuzz.h  FomDefuzz.h  LomDefuzz.h  MamdaniDefuzz.h  SugenoConclusion.h  SugenoDefuzz.h
FuzzyLogic_framework/operator/agg/: Agg.h  AggMax.h  AggPlus.h
FuzzyLogic_framework/operator/and/: And.h  AndMin.h  AndMult.h
FuzzyLogic_framework/operator/is/: Is.h  IsGaussian.h  IsGeneralizedBell.h  IsLinear.h  IsRectangle.h  IsSigmoid.h  IsSigmoidLeft.h  IsSingleton.h  IsTrapeze.h  IsTrapezeLeft.h  IsTrapezeRight.h  IsTriangle.h
FuzzyLogic_framework/operator/not/: Not.h  NotMinus1.h
FuzzyLogic_framework/operator/or/: Or.h  OrMax.h  OrPlus.h
FuzzyLogic_framework/operator/then/: SugenoThen.h  Then.h  ThenMin.h  ThenMult.h
FuzzyLogic_tests/: CMakeLists.txt
FuzzyLogic_tests/core/: BinaryExpressionModelTest.cpp  BinaryShadowExpressionTest.cpp  EvaluatorTest.cpp  FuzzyFactoryTest.cpp  UnaryExpressionModelTest.cpp  UnaryShadowExpressionTest.cpp  ValueModelTest.cpp
FuzzyLogic_tests/operator/: CogDefuzzTest.cpp  CosDefuzzTest.cpp  FomDefuzzTest.cpp  LomDefuzzTest.cpp
FuzzyLogic_tests/operator/agg/: AggMaxTest.cpp  AggPlus.cpp
FuzzyLogic_tests/operator/and/: AndMinTest.cpp  AndMultTest.cpp
FuzzyLogic_tests/operator/is/: IsGaussianTest.cpp  IsGeneralizedBellTest.cpp  IsLinearTest.cpp  IsRectangleTest.cpp  IsSigmoidLeft.cpp  IsSigmoidLeftTest.cpp  IsSigmoidTest.cpp  IsSingletonTest.cpp  IsTrapezeRightTest.cpp  IsTrapezeTest.cpp  IsTriangleTest.cpp
FuzzyLogic_tests/operator/not/: NotMinus1Test.cpp
FuzzyLogic_tests/operator/or/: OrMaxTest.cpp  OrPlusTest.cpp
FuzzyLogic_tests/operator/then/: ThenMinTest.cpp  ThenMultTest.cpp
